add android studio 2021.1.1 Beta2 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Beta 2 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-windows.exe">android-studio-2021.1.1.14-windows.exe</a>
+                                </td>
+                                <td>918325248 bytes</td>
+                                <td>c1e81ce333e68b91971b3fb75eb866a414659d4a976cdc7c6050f9667b14c879</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7l0isczuj30pu0c1wgz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-windows.zip">android-studio-2021.1.1.14-windows.zip</a>
+                                </td>
+                                <td>928990756 bytes</td>
+                                <td>707b886787fa559f9d720a6309dbf4d7df3810959963f85bc24a864eb546c6b8</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac.zip">android-studio-2021.1.1.14-mac.zip</a>
+                                </td>
+                                <td>978366798 bytes</td>
+                                <td>c0483b77dd5b3b31009255b8510f7d1d310d0e5caf3c823fe02751fda7d1b541</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac_arm.zip">android-studio-2021.1.1.14-mac_arm.zip</a>
+                                </td>
+                                <td>974824841 bytes</td>
+                                <td>fa56bd1d820905cd765c46d7ce801230ecc6554ad5edac143e99f905a0bd4e57</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-linux.tar.gz">android-studio-2021.1.1.14-linux.tar.gz</a>
+                                </td>
+                                <td>951881630 bytes</td>
+                                <td>27e270f45f29104d1231691afff8c00ce890f8648e7917f91817e9d110edc2a0</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-cros.deb">android-studio-2021.1.1.14-cros.deb</a>
+                                </td>
+                                <td>802203576 bytes</td>
+                                <td>91f36d5c6169992b12153809fa8a24fddd462f5f52e8c23521944df580835424</td>
+                            </tr>
                             <!-- Chipmunk (2021.2.1) Canary 3 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Canary 3</td>
@@ -430,7 +482,7 @@
                                 </td>
                                 <td>918519280 bytes</td>
                                 <td>a1712de0807772b11b9345c80cdbe5c614f0ba31480a98f4b37cc31b4f3a3bfc</td>
-                                <td rowspan="7"><a href="">查看</a></td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7l02deijj30nj0c076q.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
@@ -482,7 +534,7 @@
                                 </td>
                                 <td>921157800 bytes</td>
                                 <td>ad9cb6f1af3067a90c8c5c5dd7157c70af89bad1fa44d14ce3d8d61443603ca4</td>
-                                <td rowspan="7"><a href="">查看</a></td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7kzob73bj30o00bzacj.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
