add android studio 2021.1.1 Beta3 and 2021.2.1 canary4 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,110 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.1.1) Canary 4 -->
+                            <tr>
+                                <td rowspan="7">Chipmunk (2021.2.1) Canary 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.4/android-studio-2021.2.1.4-windows.exe">android-studio-2021.2.1.4-windows.exe</a>
+                                </td>
+                                <td>923209536 bytes</td>
+                                <td>50e2823cf1d0dcf4cf686c8c5914ae4c76084d38ed0ab24b337765b7d31abd31</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7qtnl5v3j30ni0c2q5e.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.4/android-studio-2021.2.1.4-windows.zip">android-studio-2021.2.1.4-windows.zip</a>
+                                </td>
+                                <td>935253222 bytes</td>
+                                <td>9fd96f6fe28710aa112044596e60c0139aa5fdc163c826ddd2e87d39e1b48265</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.4/android-studio-2021.2.1.4-mac.zip">android-studio-2021.2.1.4-mac.zip</a>
+                                </td>
+                                <td>986021956 bytes</td>
+                                <td>3dad92b1fbde76e3f9df0882e5d2ee67c9c0f0beb5efcf43582f3d5785e094c9</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.4/android-studio-2021.2.1.4-mac_arm.zip">android-studio-2021.2.1.4-mac_arm.zip</a>
+                                </td>
+                                <td>982507168 bytes</td>
+                                <td>e4a9964be0f46d6193c31985c57b9b0294014771d36a9e40a1a6e558bbeaf5dc</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.4/android-studio-2021.2.1.4-linux.tar.gz">android-studio-2021.2.1.4-linux.tar.gz</a>
+                                </td>
+                                <td>958429690 bytes</td>
+                                <td>2432d778ecdc6f00bfa2cf24bbc6a5d83f274a56ba3ffebae5139bc1ba7d70d9</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.4/android-studio-2021.2.1.4-cros.deb">android-studio-2021.2.1.4-cros.deb</a>
+                                </td>
+                                <td>805676108 bytes</td>
+                                <td>e8c6cdf027c2ea92b809afc949907d5f7ed9c57cc630c68475a33bd5102c55a6</td>
+                            </tr>
+                            <!-- Bumblebee (2021.1.1) Beta 3 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.16/android-studio-2021.1.1.16-windows.exe">android-studio-2021.1.1.16-windows.exe</a>
+                                </td>
+                                <td>918381256 bytes</td>
+                                <td>c8042f8ad101183f6894504bedaf2c22072315c831fa1b81f2aa7d788f9c3bf7</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7qqa28qvj30nv0c1go2.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.16/android-studio-2021.1.1.16-windows.zip">android-studio-2021.1.1.16-windows.zip</a>
+                                </td>
+                                <td>929045735 bytes</td>
+                                <td>5c4d7b8ea1d444babaa989d43e821a7f1fd733db5099d7f155dd3709c8a41ab7</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.16/android-studio-2021.1.1.16-mac.zip">android-studio-2021.1.1.16-mac.zip</a>
+                                </td>
+                                <td>978422420 bytes</td>
+                                <td>7be2b5aaaa6c37d9e3f5c213851a598ac86586014478574ed16128b8734b5dc1</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.16/android-studio-2021.1.1.16-mac_arm.zip">android-studio-2021.1.1.16-mac_arm.zip</a>
+                                </td>
+                                <td>974881619 bytes</td>
+                                <td>6887cdfe05b65f7af458b2d08a9b8d8d225c8779857f05b9341348db3b1d35fc</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.16/android-studio-2021.1.1.16-linux.tar.gz">android-studio-2021.1.1.16-linux.tar.gz</a>
+                                </td>
+                                <td>951907322 bytes</td>
+                                <td>a609815b3abfe511c94dce35933078ded6ec8efad6c7d049ed42ac47c00ed15e</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.16/android-studio-2021.1.1.16-cros.deb">android-studio-2021.1.1.16-cros.deb</a>
+                                </td>
+                                <td>802253316 bytes</td>
+                                <td>cb0f7c1695da0b9abc525d3503569841a6bf4fb0fe4f4b145f0d5b1467eb190b</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Beta 2 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Beta 2</td>
@@ -322,7 +426,7 @@
                             <tr>
                                 <td>Windows IDE 安装版 (64-bit)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-windows.exe">android-studio-2021.1.1.14-windows.exe</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.15/android-studio-2021.1.1.15-windows.exe">android-studio-2021.1.1.15-windows.exe</a>
                                 </td>
                                 <td>918325248 bytes</td>
                                 <td>c1e81ce333e68b91971b3fb75eb866a414659d4a976cdc7c6050f9667b14c879</td>
@@ -330,7 +434,7 @@
                             </tr>
                             <tr>
                                 <td>Windows (64-bit)</td>
-                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-windows.zip">android-studio-2021.1.1.14-windows.zip</a>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.15/android-studio-2021.1.1.15-windows.zip">android-studio-2021.1.1.15-windows.zip</a>
                                 </td>
                                 <td>928990756 bytes</td>
                                 <td>707b886787fa559f9d720a6309dbf4d7df3810959963f85bc24a864eb546c6b8</td>
@@ -338,7 +442,7 @@
                             <tr>
                                 <td>Mac (Intel)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac.zip">android-studio-2021.1.1.14-mac.zip</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.15/android-studio-2021.1.1.15-mac.zip">android-studio-2021.1.1.15-mac.zip</a>
                                 </td>
                                 <td>978366798 bytes</td>
                                 <td>c0483b77dd5b3b31009255b8510f7d1d310d0e5caf3c823fe02751fda7d1b541</td>
@@ -346,7 +450,7 @@
                             <tr>
                                 <td>Mac (Apple Silicon)</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-mac_arm.zip">android-studio-2021.1.1.14-mac_arm.zip</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.15/android-studio-2021.1.1.15-mac_arm.zip">android-studio-2021.1.1.15-mac_arm.zip</a>
                                 </td>
                                 <td>974824841 bytes</td>
                                 <td>fa56bd1d820905cd765c46d7ce801230ecc6554ad5edac143e99f905a0bd4e57</td>
@@ -354,7 +458,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.14/android-studio-2021.1.1.14-linux.tar.gz">android-studio-2021.1.1.14-linux.tar.gz</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.15/android-studio-2021.1.1.15-linux.tar.gz">android-studio-2021.1.1.15-linux.tar.gz</a>
                                 </td>
                                 <td>951881630 bytes</td>
                                 <td>27e270f45f29104d1231691afff8c00ce890f8648e7917f91817e9d110edc2a0</td>
@@ -362,7 +466,7 @@
                             <tr>
                                 <td>Chrome OS</td>
                                 <td align="left">
-                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.14/android-studio-2021.1.1.14-cros.deb">android-studio-2021.1.1.14-cros.deb</a>
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.15/android-studio-2021.1.1.15-cros.deb">android-studio-2021.1.1.15-cros.deb</a>
                                 </td>
                                 <td>802203576 bytes</td>
                                 <td>91f36d5c6169992b12153809fa8a24fddd462f5f52e8c23521944df580835424</td>
