add android studio 2021.2.1 Canary5 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.1.1) Canary 5 -->
+                            <tr>
+                                <td rowspan="7">Chipmunk (2021.2.1) Canary 5</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.5/android-studio-2021.2.1.5-windows.exe">android-studio-2021.2.1.5-windows.exe</a>
+                                </td>
+                                <td>975055552 bytes</td>
+                                <td>7771fe3ff4ba86442708d712865fa168391e7de4cf824f94e4d5432728852b5c</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7r3j30f0j30nu0c10v6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.5/android-studio-2021.2.1.5-windows.zip">android-studio-2021.2.1.5-windows.zip</a>
+                                </td>
+                                <td>987170132 bytes</td>
+                                <td>ba70215d46fc6fa5711b94e707ccf1e9c75d5442bf740c9d13dfb8f973b3db90</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.5/android-studio-2021.2.1.5-mac.zip">android-studio-2021.2.1.5-mac.zip</a>
+                                </td>
+                                <td>1037996319 bytes</td>
+                                <td>5579e3d175aeb9d85565054b499a217253251f4662b2b22040ce67b403969d60</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.5/android-studio-2021.2.1.5-mac_arm.zip">android-studio-2021.2.1.5-mac_arm.zip</a>
+                                </td>
+                                <td>1034484350 bytes</td>
+                                <td>08dc3bb5239ee3f0066492ccdc8ae61bd3bbbc2453e0737196d16e97b026df68</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.5/android-studio-2021.2.1.5-linux.tar.gz">android-studio-2021.2.1.5-linux.tar.gz</a>
+                                </td>
+                                <td>1010277547 bytes</td>
+                                <td>3d2e399eee60f6a5cd7a89589c512cfff67aa7c7886680fa914a3fd327c743a0</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.5/android-studio-2021.2.1.5-cros.deb">android-studio-2021.2.1.5-cros.deb</a>
+                                </td>
+                                <td>858313924 bytes</td>
+                                <td>87ba3f757f7f4aa6ff58bcd401878d9a45f78664d1c5f93480336dd62dc76800</td>
+                            </tr>
                             <!-- Chipmunk (2021.1.1) Canary 4 -->
                             <tr>
                                 <td rowspan="7">Chipmunk (2021.2.1) Canary 4</td>
