add android studio 2021.1.1 Beta4 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Beta 4 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.17/android-studio-2021.1.1.17-windows.exe">android-studio-2021.1.1.17-windows.exe</a>
+                                </td>
+                                <td>918392104 bytes</td>
+                                <td>b034daf97d306a520cb7ab0e9ed9bc6888addfddb7448643e0c81687d4905f60</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7r6mt4iwj30nm0bztb6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.17/android-studio-2021.1.1.17-windows.zip">android-studio-2021.1.1.17-windows.zip</a>
+                                </td>
+                                <td>929057802 bytes</td>
+                                <td>6e872d5f7510f53c10343d40f29db9795de23f8868a2b5adf1966dd10ec23a74</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.17/android-studio-2021.1.1.17-mac.zip">android-studio-2021.1.1.17-mac.zip</a>
+                                </td>
+                                <td>978435015 bytes</td>
+                                <td>a6ebef75f55ace2a241e58c0d3cd2618891fd4569a434e39522f7c0e434d5512</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.17/android-studio-2021.1.1.17-mac_arm.zip">android-studio-2021.1.1.17-mac_arm.zip</a>
+                                </td>
+                                <td>974891645 bytes</td>
+                                <td>f5d35b4324d2ca33ed54ca4294e066ae9001d367675fbe13257ba33b7c261182</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.17/android-studio-2021.1.1.17-linux.tar.gz">android-studio-2021.1.1.17-linux.tar.gz</a>
+                                </td>
+                                <td>951931391 bytes</td>
+                                <td>e562d480299dacad0f02b73879041335b12892ae0345e291c2c64e58a6fe4dde</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.17/android-studio-2021.1.1.17-cros.deb">android-studio-2021.1.1.17-cros.deb</a>
+                                </td>
+                                <td>802266256 bytes</td>
+                                <td>fcf2c4677017a07a7a709ca5953d26839c43e0bad52cf133b4e2e965224bbd50</td>
+                            </tr>
                             <!-- Chipmunk (2021.1.1) Canary 5 -->
                             <tr>
                                 <td rowspan="7">Chipmunk (2021.2.1) Canary 5</td>
