add android studio 2021.1.1 Beta5 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,124 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Bumblebee (2021.1.1) Beta 5 -->
+                            <tr>
+                                <td rowspan="7">Bumblebee (2021.1.1) Beta 5</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.18/android-studio-2021.1.1.18-windows.exe">android-studio-2021.1.1.18-windows.exe</a>
+                                </td>
+                                <td>918405944 bytes</td>
+                                <td>eed37ca08bfccf517b64826e62508350c0fa9216d2373004523ed1b48db4d432</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7rryczyzj30o50bxmzk.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.18/android-studio-2021.1.1.18-windows.zip">android-studio-2021.1.1.18-windows.zip</a>
+                                </td>
+                                <td>929073376 bytes</td>
+                                <td>d3cdd6fb6a398507e2e7138c0e928b4c994542db0ede2889c1d3d29871563de4</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.18/android-studio-2021.1.1.18-mac.zip">android-studio-2021.1.1.18-mac.zip</a>
+                                </td>
+                                <td>978795590 bytes</td>
+                                <td>9d7fda347d2ccfb1a9c438e17528421aac79eff0f24d30e3dbbd15606ca94416</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.18/android-studio-2021.1.1.18-mac_arm.zip">android-studio-2021.1.1.18-mac_arm.zip</a>
+                                </td>
+                                <td>975255475 bytes</td>
+                                <td>c75e33f54e38c4868a15b015e97e71aaa132869b386a31c9b8c25548a3ef0f15</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.1.1.18/android-studio-2021.1.1.18-linux.tar.gz">android-studio-2021.1.1.18-linux.tar.gz</a>
+                                </td>
+                                <td>951941873 bytes</td>
+                                <td>8161bc877c134031fce2f48a95f4e6deca14a8b9301587d2ca626e00014f0ee4</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.1.1.18/android-studio-2021.1.1.18-cros.deb">android-studio-2021.1.1.18-cros.deb</a>
+                                </td>
+                                <td>802298164 bytes</td>
+                                <td>3438f29b7c3076925ed86a9dbeba9347ad8287db5f75af24edd5b1dc11acf84f</td>
+                            </tr>
+                            <!-- Arctic Fox (2020.3.1) Patch 4-->
+                            <tr>
+                                <td rowspan="9">Arctic Fox (2020.3.1) Patch4</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.26/android-studio-2020.3.1.26-windows.exe">android-studio-2020.3.1.26-windows.exe</a>
+                                </td>
+                                <td>959108544 bytes</td>
+                                <td>d9181ae1668fc4a5f3a19aa5a2f9951f022bff1359a70aa0f0e7987e248c740c</td>
+                                <td rowspan="9"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7rjsq4wjj30o70e4jum.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-windows.zip">android-studio-2020.3.1.26-windows.zip</a>
+                                </td>
+                                <td>967570596 bytes</td>
+                                <td>218cc88562f06ddb5c4b61e0d7059d37688e91e9af55ab0a7bd2c0485050bd4b</td>
+                            </tr>
+                            </tr>
+                                <td rowspan="2">Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-mac.dmg">android-studio-2020.3.1.26-mac.dmg</a>
+                                </td>
+                                <td>996589573 bytes</td>
+                                <td>7da10ce0c3e998393045f6de3c37df46bd95e3bacb3f803d63fd85bc67148d6e</td>
+                            </tr>
+                            </tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-mac.zip">android-studio-2020.3.1.26-mac.zip</a>
+                                </td>
+                                <td>997541952 bytes</td>
+                                <td>29674f000d76345494a6d4b39a7699dc1507bc18bc6029567cf31af73f45cd8b</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Mac (ARM)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-mac_arm.dmg">android-studio-2020.3.1.26-mac_arm.dmg</a>
+                                </td>
+                                <td>993738651 bytes</td>
+                                <td>19688e19df59f37ce1d4b2b339d0c81dbc8f443fb2c8cbe4d6e4178cc70f935a</td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-mac_arm.zip">android-studio-2020.3.1.26-mac_arm.zip</a>
+                                </td>
+                                <td>994654602 bytes</td>
+                                <td>d958db4136e4c1d0c9272ecc286860f39591adc9b415eac683ecf67050e61a70</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2020.3.1.26/android-studio-2020.3.1.26-linux.tar.gz">android-studio-2020.3.1.26-linux.tar.gz</a>
+                                </td>
+                                <td>980638905 bytes</td>
+                                <td>344d858235ed5d3095ac25916a4a8f8730069f76e5a5fd0eba02522af88f541b</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2020.3.1.26/android-studio-2020.3.1.26-cros.deb">android-studio-2020.3.1.26-cros.deb</a>
+                                </td>
+                                <td>852022056 bytes</td>
+                                <td>e2a45256658fbac21248c1f9cd6afda46860478dd012c39b95964097307b03a4</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Beta 4 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Beta 4</td>
