add android studio 2021.2.1 Canary6 links

--- a/index.html
+++ b/index.html
@@ -315,6 +315,58 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- Chipmunk (2021.1.1) Canary 6 -->
+                            <tr>
+                                <td rowspan="7">Chipmunk (2021.2.1) Canary 6</td>
+                            </tr>
+                            <tr>
+                                <td>Windows IDE 安装版 (64-bit)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.6/android-studio-2021.2.1.6-windows.exe">android-studio-2021.2.1.6-windows.exe</a>
+                                </td>
+                                <td>978753824 bytes</td>
+                                <td>16a8cf94580166679b6b3789d9b2142d447c0d453b57f4e12458c15aa4e2a98d</td>
+                                <td rowspan="7"><a href="https://tva1.sinaimg.cn/large/008i3skNly1gy7s8dyrtjj30ns0c3acj.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>Windows (64-bit)</td>
+                                <td align="left"><a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.6/android-studio-2021.2.1.6-windows.zip">android-studio-2021.2.1.6-windows.zip</a>
+                                </td>
+                                <td>990881920 bytes</td>
+                                <td>a5af8dffdbb999d3029921a3c411e2bb504a4a2a17c7ff8e76eaba40f28c3ae9</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Intel)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.6/android-studio-2021.2.1.6-mac.zip">android-studio-2021.2.1.6-mac.zip</a>
+                                </td>
+                                <td>1071937918 bytes</td>
+                                <td>2af33e0d12d852459bc6a0d12b81da0047ef02817dd3938e8067eb5f11fe1b3d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac (Apple Silicon)</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.6/android-studio-2021.2.1.6-mac_arm.zip">android-studio-2021.2.1.6-mac_arm.zip</a>
+                                </td>
+                                <td>1068428165 bytes</td>
+                                <td>a23fb33a7feda2ebf80851b3f8712858c0703325984481bce3474b0040647f3d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/ide-zips/2021.2.1.6/android-studio-2021.2.1.6-linux.tar.gz">android-studio-2021.2.1.6-linux.tar.gz</a>
+                                </td>
+                                <td>1015397333 bytes</td>
+                                <td>08a4b75158b5c100578afebf20090cc68c4d0bdcf0223c85cc524d0c4f46debb</td>
+                            </tr>
+                            <tr>
+                                <td>Chrome OS</td>
+                                <td align="left">
+                                    <a href="https://redirector.gvt1.com/edgedl/android/studio/install/2021.2.1.6/android-studio-2021.2.1.6-cros.deb">android-studio-2021.2.1.6-cros.deb</a>
+                                </td>
+                                <td>861241420 bytes</td>
+                                <td>8c4b9a34f3a71848d38ad9b096333a1bd7185436aded39550c6c85a2cd7b0dc1</td>
+                            </tr>
                             <!-- Bumblebee (2021.1.1) Beta 5 -->
                             <tr>
                                 <td rowspan="7">Bumblebee (2021.1.1) Beta 5</td>
